--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,18 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Ion-Gym
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-list>
+    <button ion-item *ngFor="let note of notes" (click)="goToDetail(note.id)">
+      {{ note.title }}
+    </button>
+  </ion-list>
+  <div padding>
+    <button ion-button block (click)="createNote()">Crear Nota</button>
+  </div>
 </ion-content>
